# appconfiguration-rust-sdk

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
data/: data-dump-enterprise-plan-sdk-testing.json  data-dump-lite-plan-sdk-testing.json
examples/: demo.rs
src/: entity.rs  errors.rs  feature.rs  lib.rs  models.rs  property.rs  segment_evaluation.rs  value.rs
src/client/: app_configuration_client.rs  cache.rs  feature.rs  feature_proxy.rs  feature_snapshot.rs  http.rs  mod.rs  property.rs  property_proxy.rs  property_snapshot.rs  value.rs
src/segment_evaluation/: errors.rs  mod.rs
src/tests/: mod.rs  test_get_feature.rs  test_get_feature_ids.rs  test_get_property.rs  test_get_property_ids.rs  test_using_example_data.rs
tests/: test_app_config.rs
